# ModernCPP2020

OpenCv/: CMakeLists.txt
OpenCv/src/: BlankImage.cpp  CameraCalibration.cpp  CameraVideo.cpp  HistCal.cpp  HistComparison.cpp  HistEqualization.cpp  IO.cpp  Load&Dispaly.cpp  PlayVideo.cpp  Transformation.cpp  binaryVision.cpp  edge.cpp  ero&dil.cpp  filter.cpp  filtering.cpp  imread.cpp  imwrite.cpp  introductionOpencv.cpp  light.cpp  mouse.h  smoothing.cpp
homework_1/: a.out  help.cpp
homework_1/task_1/: commands.sh
homework_1/task_2/: CMakeLists.txt  build.sh
homework_1/task_2/src/: main.cpp
homework_1/task_2/task1_build/src/: sum.cpp
homework_1/task_2/task2_cmake/: run.sh
homework_1/task_2/task2_cmake/src/: .main.cpp.swp  subtract.cpp
homework_2/task_1/: main
homework_2/task_2/: main.cpp
homework_3/include/: html_writer.hpp
homework_3/src/: createimage.cpp  html_writer.cpp
homework_4/tests/: homework_4.h
homework_4/working/: Array.cpp  Count.cpp  Count_If.cpp  Fill.cpp  Find.cpp  For_Each.cpp  Map.cpp  Sort.cpp  Unorded_map.cpp  Vector.cpp  accumlate  accumulate.cpp  array  count  count_if  fill  find  for_each  map  rotate  rotate.cpp  sort  unorded_map  vector
homework_5/examples_lec/: Any.cpp  Chrono  Chrono.cpp  Extension.cpp  ExtensionPart2.cpp  File_Part2.cpp  File_part.cpp  Optinoal.cpp  Read_File.cpp  Read_Lines.cpp  Stem.cpp  Swap.cpp  Tuple.cpp  a.out  any  bin  current_dir  current_dir.cpp  dir  directory_itr.cpp  exist  exists.cpp  extension  extesionpart2  file  file2  option  out.txt  read  stem  swap  test.cols.txt  tub  write  writing_binary.cpp  writing_text.cpp
homework_5/examples_lec/.cache/clangd/index/: main.cpp.38AA0AB08B1D544E.idx
homework_5/include/: serialize.hpp
homework_6/example/: CWclass.cpp  LRvalue.cpp  Operator.cpp  Struct.cpp  copyMove  lrvalue  operator  struct
