cmake_minimum_required(VERSION 3.10)
project( DisplayImage )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( DisplayImage src/light.cpp )
add_executable( imread src/imread.cpp )
target_link_libraries( imread ${OpenCV_LIBS} )
target_link_libraries( DisplayImage ${OpenCV_LIBS} )